Changing 404 page to see if it actually works

--- a/404.html
+++ b/404.html
@@ -46,5 +46,7 @@
       );
     </script>
   </head>
-  <body></body>
+  <body>
+    <h1>THIS ISN'T WORKING AND IM TESTING NEW THINGS NOW.</h1>
+  </body>
 </html>
