Moving around 404 page to see if it was put in the wrong place

--- a/public/404.html
+++ b/public/404.html
@@ -46,7 +46,5 @@
       );
     </script>
   </head>
-  <body>
-    <h1>THIS ISN'T WORKING AND IM TESTING NEW THINGS NOW.</h1>
-  </body>
+  <body></body>
 </html>
